[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Gameplay/ItemDrop.gd" type="Script" id=1]
[ext_resource path="res://Assets/Png/items/equipments.png" type="Texture" id=2]
[ext_resource path="res://Assets/Png/other/dropped_item_shade.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "collecting"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Item:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Item:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.02, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Item/Shade:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 2, 2, 2 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.079229, 1, 0.244602 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1, 0.330887, 1 )

[node name="ItemDrop" type="KinematicBody"]
collision_layer = 64
collision_mask = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/collecting = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="Item" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0165463, 0 )
billboard = 1
texture = SubResource( 4 )

[node name="Shade" type="Sprite3D" parent="Item"]
transform = Transform( 1.17268, 0, 0, 0, 1.17268, 0, 0, 0, 1.17268, 0, -0.105445, 0 )
axis = 1
texture = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.0581349, 0, 0, 0, 0.451986, -0.0106121, 0, 0 )
shape = SubResource( 5 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
transform = Transform( 0.0791874, 0, 0, 0, 0.0621803, 0, 0, 0, 1, 0, 0.0453049, -0.0251154 )
aabb = AABB( -1.21686, -1.93659, -0.0741211, 2, 2, 0.193355 )

[node name="PlayerDetector" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="PlayerDetector"]
transform = Transform( 0.0795292, 0, 0, 0, 0.189013, 0, 0, 0, 0.077966, 0, 0, 0 )
shape = SubResource( 6 )

[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
